--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -1073,7 +1073,7 @@
     .tabs-item {
         margin-bottom: 20px;
     }
-    .tabs-item {
+    .tabs-item--training {
         width: auto;
     }
 }
