--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -648,7 +648,7 @@
 
 .smart__top {
     &-info {
-        font-weight: $fw-regular;
+        // font-weight: $fw-regular;
         line-height: $base*6.5;
         letter-spacing: 0.02em;
         color: $color-secondary-200;
