--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -72,19 +72,19 @@ h1 {
     font-weight: 600;
     letter-spacing: 0.01em;
     color: $color-secondary-50;
-    padding: 18px 38px;
+    padding: $base*4.5 $base*7.5;
     background-color: $color-primary-50;
-    border-radius: 30px;
+    border-radius: $base*7.5;
     outline: none;
     transition: all $transition;
     &:hover {
-        box-shadow: 0px 10px 10px rgba(30, 95, 93, 0.4);
+        box-shadow: 0px $base*2.5 $base*2.5 rgba(30, 95, 93, 0.4);
     }
     &:active {
         background: #175654;
     }
     &:focus {
-        box-shadow: inset 0px 10px 10px rgba(0, 0, 0, 0.15);
+        box-shadow: inset 0px $base*2.5 $base*2.5 rgba(0, 0, 0, 0.15);
     }
 }
 
@@ -131,7 +131,6 @@ h1 {
     &--training {
         text-align: center;
     }
-    &-items {}
     &-item {
         display: inline-block;
         text-align: center;
@@ -145,19 +144,19 @@ h1 {
         border: none;
         background: none;
         &--training {
-            max-width: 260px;
+            max-width: $base*65;
             margin-left: -.22em;
             &-online {
-                max-width: 260px;
+                max-width: $base*65;
                 &+& {
-                    margin-left: 20px;
+                    margin-left: $base*5;
                 }
             }
         }
         &--popup {
-            max-width: 200px;
+            max-width: $base*50;
             &+& {
-                margin-left: 20px;
+                margin-left: $base*5;
             }
         }
         &::before {
@@ -268,7 +267,7 @@ input[type="number"]::-webkit-inner-spin-button {
     width: 100%;
     height: 100%;
     visibility: hidden;
-    background: rgba(0, 0, 0, 0.5);
+    background: rgba($color-black, 0.5);
     backdrop-filter: blur($base);
     opacity: 0;
     transition: $transition;
@@ -329,16 +328,16 @@ input[type="number"]::-webkit-inner-spin-button {
 
 .popup-input {
     border: 1px solid $color-primary-400;
-    border-radius: 10px;
+    border-radius: $base*2.5;
     padding: $base*3 $base*5;
     outline: none;
     line-height: $base*6.5;
     font-weight: $fw-light;
     letter-spacing: 0.02em;
     color: $color-secondary-200;
-    max-width: 200px;
+    max-width: $base*50;
     transition: all .3s;
-    max-width: 200px;
+    max-width: $base*50;
     width: 100%;
     &+& {
         margin-left: $base*5;
@@ -484,8 +483,8 @@ input[type="number"]::-webkit-inner-spin-button {
         display: none;
         z-index: 1;
         position: absolute;
-        background: #FFFFFF;
-        border: 1px solid #FFECA0;
+        background: $color-white;
+        border: 1px solid $color-primary-400;
         border-radius: $base*2.5;
         max-width: 420px;
         width: 100%;
