--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -66,7 +66,8 @@
                 right: 0;
                 display: flex;
             }
-            &:hover {
+            &:hover,
+            &:focus {
                 .menu-wrapper__dropdown {
                     opacity: 1;
                 }
@@ -194,7 +195,6 @@
 }
 
 .btn-burger {
-    outline: none;
     border: none;
     background: none;
     cursor: pointer;
